@@ -1,3 +1,8 @@
+2007-10-26  Albert Chu  <chu11@llnl.gov>
+
+	* src/libs/cerebro/cerebro_event.c (_setup_event_connection): Fix
+	default port bug.
+	
 2007-10-25  Albert Chu  <chu11@llnl.gov>
 
 	* man/Makefile.am: Install cerebro.1 manpage in man1 instead of
